syntax = "proto3";

package resizer.v1;

service ResizerService {
  rpc ResizeImage(ResizeImageRequest) returns (stream ResizeImageResponse) {}
}

message ResizeImageRequest {
  string url = 1;
}

message ResizeImageResponse {
  bytes image = 1;
}
